delete addSQL from login method

--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -9,32 +9,32 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: White;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="620.0" style="-fx-background-color: White;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
    <children>
-      <TextField fx:id="Login_Password" layoutX="220.0" layoutY="218.0" promptText="Password" style="-fx-background-color: #4c4c4c;">
+      <TextField fx:id="Login_Password" layoutX="230.0" layoutY="218.0" promptText="Password" style="-fx-background-color: #000000; -fx-text-inner-color: white;">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </TextField>
-      <Line endX="410.0" endY="33.40000915527344" layoutX="190.0" layoutY="73.0" startX="-189.99998474121094" startY="33.40000915527344" />
-      <ImageView fitHeight="105.0" fitWidth="180.0" layoutX="210.0">
+      <Line endX="430.0" endY="33.40000915527344" layoutX="190.0" layoutY="73.0" startX="-189.99998474121094" startY="33.40000915527344" />
+      <ImageView fitHeight="105.0" fitWidth="180.0" layoutX="220.0">
          <image>
             <Image url="@ICON.png" />
          </image>
       </ImageView>
-      <Label layoutX="270.0" layoutY="113.0" text="Login" textFill="#4c4c4c">
+      <Label layoutX="280.0" layoutY="113.0" text="Login" textFill="#4c4c4c">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="Login_Email" layoutX="220.0" layoutY="178.0" promptText="Email" style="-fx-background-color: #4c4c4c;">
+      <TextField fx:id="Login_Email" layoutX="230.0" layoutY="178.0" promptText="Email" style="-fx-background-color: #000000; -fx-border-color: white; -fx-text-inner-color: white;">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </TextField>
-      <Button fx:id="Login_Login_button" layoutX="220.0" layoutY="258.0" mnemonicParsing="false" onAction="#Login" prefHeight="26.0" prefWidth="159.0" style="-fx-background-color: #4c4c4c #4c4c4c;" text="Login" textFill="WHITE" />
-      <Button fx:id="app_Registration_button" layoutX="390.0" layoutY="258.0" mnemonicParsing="false" onAction="#openRegistrationPage" style="-fx-background-color: #4c4c4c;" text="Register" textFill="WHITE" />
-      <Button fx:id="app_home_button" layoutX="150.0" layoutY="258.0" mnemonicParsing="false" onAction="#openHomePage" prefHeight="26.0" prefWidth="59.0" style="-fx-background-color: #4c4c4c;" text="Home" textFill="WHITE" />
+      <Button fx:id="Login_Login_button" layoutX="230.0" layoutY="258.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="159.0" style="-fx-background-color: #000000;" text="Login" textFill="WHITE" />
+      <Button fx:id="app_Registration_button" layoutX="400.0" layoutY="258.0" mnemonicParsing="false" style="-fx-background-color: #000000;" text="Register" textFill="WHITE" />
+      <Button fx:id="app_home_button" layoutX="160.0" layoutY="258.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="59.0" style="-fx-background-color: #000000;" text="Home" textFill="WHITE" />
       <Label fx:id="log_error" layoutX="390.0" layoutY="177.0" prefHeight="26.0" prefWidth="199.0" text="ERROR" visible="false" />
    </children>
 </AnchorPane>
